// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFullAgentPolicy should support a different data output 1`] = `
Object {
  "agent": Object {
    "download": Object {
      "sourceURI": "http://default-registry.co",
    },
    "features": Object {},
    "monitoring": Object {
      "enabled": true,
      "logs": false,
      "metrics": true,
      "namespace": "default",
      "use_output": "default",
    },
    "protection": Object {
      "enabled": false,
      "signing_key": "",
      "uninstall_token_hash": "",
    },
  },
  "fleet": Object {
    "hosts": Array [
      "http://fleetserver:8220",
    ],
  },
  "id": "agent-policy",
  "inputs": Array [],
  "output_permissions": Object {
    "data-output-id": Object {
      "_elastic_agent_checks": Object {
        "cluster": Array [
          "monitor",
        ],
      },
    },
    "default": Object {
      "_elastic_agent_checks": Object {
        "cluster": Array [
          "monitor",
        ],
      },
      "_elastic_agent_monitoring": Object {
        "indices": Array [
          Object {
            "names": Array [
              "metrics-default",
            ],
            "privileges": Array [],
          },
        ],
      },
    },
  },
  "outputs": Object {
    "data-output-id": Object {
      "hosts": Array [
        "http://es-data.co:9201",
      ],
      "preset": "balanced",
      "type": "elasticsearch",
    },
    "default": Object {
      "hosts": Array [
        "http://127.0.0.1:9201",
      ],
      "preset": "balanced",
      "type": "elasticsearch",
    },
  },
  "revision": 1,
  "secret_references": Array [],
  "signed": Object {
    "data": "",
    "signature": "",
  },
}
`;

exports[`getFullAgentPolicy should support a different monitoring output 1`] = `
Object {
  "agent": Object {
    "download": Object {
      "sourceURI": "http://default-registry.co",
    },
    "features": Object {},
    "monitoring": Object {
      "enabled": true,
      "logs": false,
      "metrics": true,
      "namespace": "default",
      "use_output": "monitoring-output-id",
    },
    "protection": Object {
      "enabled": false,
      "signing_key": "",
      "uninstall_token_hash": "",
    },
  },
  "fleet": Object {
    "hosts": Array [
      "http://fleetserver:8220",
    ],
  },
  "id": "agent-policy",
  "inputs": Array [],
  "output_permissions": Object {
    "default": Object {
      "_elastic_agent_checks": Object {
        "cluster": Array [
          "monitor",
        ],
      },
    },
    "monitoring-output-id": Object {
      "_elastic_agent_checks": Object {
        "cluster": Array [
          "monitor",
        ],
      },
      "_elastic_agent_monitoring": Object {
        "indices": Array [
          Object {
            "names": Array [
              "metrics-default",
            ],
            "privileges": Array [],
          },
        ],
      },
    },
  },
  "outputs": Object {
    "default": Object {
      "hosts": Array [
        "http://127.0.0.1:9201",
      ],
      "preset": "balanced",
      "type": "elasticsearch",
    },
    "monitoring-output-id": Object {
      "hosts": Array [
        "http://es-monitoring.co:9201",
      ],
      "preset": "balanced",
      "type": "elasticsearch",
    },
  },
  "revision": 1,
  "secret_references": Array [],
  "signed": Object {
    "data": "",
    "signature": "",
  },
}
`;

exports[`getFullAgentPolicy should support both different outputs for data and monitoring  1`] = `
Object {
  "agent": Object {
    "download": Object {
      "sourceURI": "http://default-registry.co",
    },
    "features": Object {},
    "monitoring": Object {
      "enabled": true,
      "logs": false,
      "metrics": true,
      "namespace": "default",
      "use_output": "monitoring-output-id",
    },
    "protection": Object {
      "enabled": false,
      "signing_key": "",
      "uninstall_token_hash": "",
    },
  },
  "fleet": Object {
    "hosts": Array [
      "http://fleetserver:8220",
    ],
  },
  "id": "agent-policy",
  "inputs": Array [],
  "output_permissions": Object {
    "data-output-id": Object {
      "_elastic_agent_checks": Object {
        "cluster": Array [
          "monitor",
        ],
      },
    },
    "monitoring-output-id": Object {
      "_elastic_agent_checks": Object {
        "cluster": Array [
          "monitor",
        ],
      },
      "_elastic_agent_monitoring": Object {
        "indices": Array [
          Object {
            "names": Array [
              "metrics-default",
            ],
            "privileges": Array [],
          },
        ],
      },
    },
  },
  "outputs": Object {
    "data-output-id": Object {
      "hosts": Array [
        "http://es-data.co:9201",
      ],
      "preset": "balanced",
      "type": "elasticsearch",
    },
    "monitoring-output-id": Object {
      "hosts": Array [
        "http://es-monitoring.co:9201",
      ],
      "preset": "balanced",
      "type": "elasticsearch",
    },
  },
  "revision": 1,
  "secret_references": Array [],
  "signed": Object {
    "data": "",
    "signature": "",
  },
}
`;
